--- a/pipeline_dados/notebooks/exploracao.ipynb
+++ b/pipeline_dados/notebooks/exploracao.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Leitura dos dados"
+    "# Leitura dos Arquivos e Extração dos Dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
        " ...]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6076,24 +6076,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparando os Campos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Nome do Item,Classificação do Produto,Valor em Reais (R$),Quantidade em Estoque,Nome da Loja,Data da Venda\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colunas JSON: (5 Campos)\n",
+      "['Nome do Produto', 'Categoria do Produto', 'Preço do Produto (R$)', 'Quantidade em Estoque', 'Filial']\n"
+     ]
     }
    ],
    "source": [
-    "dados_csv"
+    "colunas_json = list(dados_json[0].keys())\n",
+    "print(f\"Colunas JSON: ({len(colunas_json)} Campos)\\n{colunas_json}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colunas CSV: (6 Campos)\n",
+      "['Nome do Item', 'Classificação do Produto', 'Valor em Reais (R$)', 'Quantidade em Estoque', 'Nome da Loja', 'Data da Venda']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colunas_csv  = list(dados_csv[0].keys())\n",
+    "print(f\"Colunas CSV: ({len(colunas_csv)} Campos)\\n{colunas_csv}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
