--- a/pipeline_dados/notebooks/exploracao.ipynb
+++ b/pipeline_dados/notebooks/exploracao.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
        " ...]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6084,7 +6084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -6103,7 +6103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -6129,7 +6129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -6143,7 +6143,7 @@
        " 'Data da Venda': 'Data da Venda'}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6166,7 +6166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -12175,7 +12175,7 @@
        " ...]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12195,7 +12195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -12214,7 +12214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -12229,6 +12229,122 @@
    "source": [
     "colunas_csv  = list(dados_csv[0].keys())\n",
     "print(f\"Colunas CSV: ({len(colunas_csv)} Campos)\\n{colunas_csv}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agrupando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de registros JSON: 3123\n",
+      "Numero de registros CSV:  1323\n",
+      "Soma dos registros:       4446\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Numero de registros JSON: {len(dados_json)}\")\n",
+    "print(f\"Numero de registros CSV:  {len(dados_csv)}\")\n",
+    "print(f\"Soma dos registros:       {len(dados_json) + len(dados_csv)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de registros agrupados: 4446\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados_agrupados = []\n",
+    "dados_agrupados.extend(dados_json)\n",
+    "dados_agrupados.extend(dados_csv)\n",
+    "\n",
+    "print(f\"Numero de registros agrupados: {len(dados_agrupados)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validando dados agrupados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_json[0] == dados_agrupados[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_csv[-1] == dados_agrupados[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dados_json) + len(dados_csv) == len(dados_agrupados)"
    ]
   }
  ],
