Salvando dados agrupados como CSV

--- a/pipeline_dados/notebooks/exploracao.ipynb
+++ b/pipeline_dados/notebooks/exploracao.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
        " ...]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6084,7 +6084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -6103,7 +6103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -6129,7 +6129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -6143,7 +6143,7 @@
        " 'Data da Venda': 'Data da Venda'}"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6166,7 +6166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -12175,7 +12175,7 @@
        " ...]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12195,7 +12195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -12214,7 +12214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -12240,7 +12240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -12261,7 +12261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -12289,7 +12289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -12298,7 +12298,7 @@
        "True"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12309,7 +12309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -12318,7 +12318,7 @@
        "True"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12329,7 +12329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -12338,13 +12338,61 @@
        "True"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(dados_json) + len(dados_csv) == len(dados_agrupados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Salvando dados agrupados como CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nome do Produto',\n",
+       " 'Categoria do Produto',\n",
+       " 'Preço do Produto (R$)',\n",
+       " 'Quantidade em Estoque',\n",
+       " 'Filial',\n",
+       " 'Data da Venda']"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "header = list(dados_agrupados[-1].keys())\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_dados_agrupados = '../data_prossesed/dados_agrupados.csv'\n",
+    "\n",
+    "with open(path_dados_agrupados, 'w') as file_to_save:\n",
+    "    writer = csv.DictWriter(file_to_save, fieldnames=header)\n",
+    "    writer.writeheader()\n",
+    "    for row in dados_agrupados:\n",
+    "        writer.writerow(row)"
    ]
   }
  ],
