--- a/pipeline_dados/notebooks/exploracao.ipynb
+++ b/pipeline_dados/notebooks/exploracao.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
        " ...]"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6084,7 +6084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -6103,7 +6103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -6129,7 +6129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -6143,7 +6143,7 @@
        " 'Data da Venda': 'Data da Venda'}"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6166,7 +6166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -6175,7 +6175,7 @@
        "' new_dados_csv = []\\n\\nfor registro in dados_csv:\\n    tmp_dict = {}\\n    for key, value in registro.items():\\n        tmp_dict[key_mapping[key]] = value\\n    new_dados_csv.append(tmp_dict)\\n\\ndados_csv = new_dados_csv\\ndados_csv '"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6195,7 +6195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6204,7 +6204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -6223,7 +6223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -6249,7 +6249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -6270,7 +6270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -6298,7 +6298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -6307,7 +6307,7 @@
        "True"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6318,7 +6318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -6327,7 +6327,7 @@
        "True"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6338,7 +6338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -6347,7 +6347,7 @@
        "True"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6365,7 +6365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -6379,7 +6379,7 @@
        " 'Data da Venda']"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6391,9 +6391,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sombra de olhos',\n",
+       " 'Eletrônicos',\n",
+       " '41.73',\n",
+       " '5',\n",
+       " 'Filial 6',\n",
+       " '2022-11-21 18:58:06.794203']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_agrupados_tabela = [header]\n",
+    "\n",
+    "for row in dados_agrupados:\n",
+    "    new_row = []\n",
+    "    for field in header:\n",
+    "        new_row.append(row.get(field, \"Indisoinivel\"))\n",
+    "    dados_agrupados_tabela.append(new_row)\n",
+    "\n",
+    "dados_agrupados_tabela[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "dict contains fields not in fieldnames: 'Data da Venda'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m writer\u001b[38;5;241m.\u001b[39mwriteheader()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m dados_agrupados:\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mwriter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriterow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/Cellar/python@3.11/3.11.7_1/Frameworks/Python.framework/Versions/3.11/lib/python3.11/csv.py:154\u001b[0m, in \u001b[0;36mDictWriter.writerow\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwriterow\u001b[39m(\u001b[38;5;28mself\u001b[39m, rowdict):\n\u001b[0;32m--> 154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwriter\u001b[38;5;241m.\u001b[39mwriterow(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dict_to_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrowdict\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/usr/local/Cellar/python@3.11/3.11.7_1/Frameworks/Python.framework/Versions/3.11/lib/python3.11/csv.py:149\u001b[0m, in \u001b[0;36mDictWriter._dict_to_list\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    147\u001b[0m     wrong_fields \u001b[38;5;241m=\u001b[39m rowdict\u001b[38;5;241m.\u001b[39mkeys() \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames\n\u001b[1;32m    148\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m wrong_fields:\n\u001b[0;32m--> 149\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdict contains fields not in fieldnames: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    150\u001b[0m                          \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mrepr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m wrong_fields]))\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (rowdict\u001b[38;5;241m.\u001b[39mget(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrestval) \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames)\n",
+      "\u001b[0;31mValueError\u001b[0m: dict contains fields not in fieldnames: 'Data da Venda'"
+     ]
+    }
+   ],
    "source": [
     "path_dados_agrupados = '../data_prossesed/dados_agrupados.csv'\n",
     "\n",
